--- a/app/web/config/configGeoServer.json
+++ b/app/web/config/configGeoServer.json
@@ -1,4 +1,6 @@
 {
     "address" : "http://172.18.138.171/geoserver",
-    "repository" : "hamk-map-project"
+    "repository" : "hamk-map-project",
+    "user" : "admin",
+    "password" : "geoserver"
 }
