--- a/app/web/config/configContent.json
+++ b/app/web/config/configContent.json
@@ -9,12 +9,19 @@
     {
       "id":0,
       "type":"popup",
+      "icon":"glyphicon-search",
+      "name":"search",
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Search</h4></div><div class=\"modal-body\"><p>Click twice to position, in order, the origin and the destination.<br>If you want to stop, press esc.</p></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close<button></div>"
+    },
+    {
+      "id":1,
+      "type":"popup",
       "icon":"glyphicon-envelope",
       "name":"contact",
       "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Contact Us</h4></div><div class=\"modal-body\"><form><label for=\"message-text\" class=\"control-label\">Your email:</label><div class=\"form-group\"><div class=\"input-group\"><span class=\"input-group-addon\">@</span><input type=\"email\" class=\"form-control\" id=\"contactEmail\"></div> <br /><div class=\"form-group\"><label for=\"message-text\" class=\"control-label\">Message:</label><textarea class=\"form-control\" id=\"message-text\" id=\"contactMessage\"></textarea></div></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button><button type=\"button\" class=\"btn btn-primary disabled\">Send message</button></div>"
     },
     {
-      "id":1,
+      "id":2,
       "type":"popup",
       "icon":"glyphicon-info-sign",
       "name":"informations",
