test Prepare SearchButton

--- a/app/web/config/configContent.json
+++ b/app/web/config/configContent.json
@@ -11,7 +11,7 @@
       "type":"popup",
       "icon":"glyphicon-search",
       "name":"search",
-      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Search</h4></div><div class=\"modal-body\"><p>Click twice to position, in order, the origin and the destination.<br>If you want to stop, press esc.</p></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close<button></div>"
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Search</h4></div><div class=\"modal-body\"><p>Click twice to position, in order, the origin and the destination.<br>If you want to stop, press esc.</p></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button></div>"
     },
     {
       "id":1,
