--- a/app/web/config/configContent.json
+++ b/app/web/config/configContent.json
@@ -9,9 +9,9 @@
     {
       "id":0,
       "type":"popup",
-      "icon":"glyphicon-search",
-      "name":"search",
-      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Search</h4></div><div class=\"modal-body\"><p>Click twice to position, in order, the origin and the destination.<br>If you want to stop, press esc.</p></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button></div>"
+      "icon":"glyphicon-map-marker",
+      "name":"focus",
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Search</h4></div><div class=\"modal-body\"><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusKeyword\" value=\"optionsFocusKeyword\" checked>Keyword</label></div><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusLatLong\" value=\"optionsFocusLatLong\">By coordinates (Lat/Long)</label></div><form class=\"form-inline\"><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Lat\">Latitude</label><input type=\"text\" class=\"form-control\" id=\"focusLatLong-Lat\" placeholder=\"Lat\"></div><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Long\">Longitude</label><input type=\"text\" class=\"form-control\" id=\"focusLatLong-Long\" placeholder=\"Long\"></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button></div>"
     },
     {
       "id":1,
