--- a/app/web/config/configContent.json
+++ b/app/web/config/configContent.json
@@ -3,29 +3,32 @@
   "div_toc_content" : "toc-content",
   "div_toc_descript" : "toc-description",
   "div_popup_content" : "popup-content",
-  "content_toc_title" : "Toc title",
-  "content_toc_descript" : "Toc description",
+  "content_toc_title" : "HAMK MapProject",
+  "content_toc_descript" : "This is a Student map project",
   "content_overTheMap": [
     {
       "id":0,
-      "type":"popup",
+      "type":"Popup",
       "icon":"glyphicon-map-marker",
       "name":"focus",
-      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Focus</h4></div><div class=\"modal-body\"><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusKeyword\" value=\"optionsFocusKeyword\" checked>Keyword</label></div><form><div class=\"form-group\"><div id=\"optionsFocusInterests\"></div></form></div><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusLatLong\" value=\"optionsFocusLatLong\">By coordinates</label></div><form class=\"form-inline\"><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Lat\">Latitude</label><input type=\"text\" class=\"form-control\" id=\"textFocusLatLong-Lat\" placeholder=\"Lat\" value=\"60.172897\"></div><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Long\">Longitude</label><input type=\"text\" class=\"form-control\" id=\"textFocusLatLong-Long\" placeholder=\"Long\" value=\"24.941583\"></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button><button type=\"button\" class=\"btn btn-primary\" onclick=\"buttonFocus();\">Search</button></div>"
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Focus</h4></div><div class=\"modal-body\"><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusKeyword\" value=\"optionsFocusKeyword\" checked>Keyword</label></div><form><div class=\"form-group\"><div id=\"optionsFocusInterests\"></div></form></div><div class=\"radio\"><label><input type=\"radio\" name=\"optionsFocus\" id=\"optionsFocusLatLong\" value=\"optionsFocusLatLong\">By coordinates</label></div><form class=\"form-inline\"><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Lat\">Latitude</label><input type=\"text\" class=\"form-control\" id=\"textFocusLatLong-Lat\" placeholder=\"Lat\" value=\"60.172897\"></div><div class=\"form-group\"><label class=\"sr-only\" for=\"focusLatLong-Long\">Longitude</label><input type=\"text\" class=\"form-control\" id=\"textFocusLatLong-Long\" placeholder=\"Long\" value=\"24.941583\"></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button><button type=\"button\" class=\"btn btn-primary\" onclick=\"buttonFocus();\">Search</button></div>",
+      "view":"views/popupFocus.html"
     },
     {
       "id":1,
-      "type":"popup",
+      "type":"Popup",
       "icon":"glyphicon-envelope",
       "name":"contact",
-      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Contact Us</h4></div><div class=\"modal-body\"><form><label for=\"message-text\" class=\"control-label\">Your email:</label><div class=\"form-group\"><div class=\"input-group\"><span class=\"input-group-addon\">@</span><input type=\"email\" class=\"form-control\" id=\"contactEmail\"></div> <br /><div class=\"form-group\"><label for=\"message-text\" class=\"control-label\">Message:</label><textarea class=\"form-control\" id=\"message-text\" id=\"contactMessage\"></textarea></div></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button><button type=\"button\" class=\"btn btn-primary disabled\">Send message</button></div>"
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Contact Us</h4></div><div class=\"modal-body\"><form><label for=\"message-text\" class=\"control-label\">Your email:</label><div class=\"form-group\"><div class=\"input-group\"><span class=\"input-group-addon\">@</span><input type=\"email\" class=\"form-control\" id=\"contactEmail\"></div> <br /><div class=\"form-group\"><label for=\"message-text\" class=\"control-label\">Message:</label><textarea class=\"form-control\" id=\"message-text\" id=\"contactMessage\"></textarea></div></div></form></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button><button type=\"button\" class=\"btn btn-primary disabled\">Send message</button></div>",
+      "view":"views/popupContact.html"
     },
     {
       "id":2,
-      "type":"popup",
+      "type":"Popup",
       "icon":"glyphicon-info-sign",
       "name":"informations",
-      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Informations</h4></div><div class=\"modal-body\"><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/fanda.png\" alt=\"Fanda\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Fanda</h4>Description of Fanda</div></div><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/pev.png\" alt=\"Pev\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Pev</h4>Description of Pev</div><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/github.png\" alt=\"Fanda\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Github Sources</h4>You can Follow our activities on Github -> <a href=\"https://github.com/PapyPev/hamk-map-project\">sources</a></div></div></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button></div>"
+      "content":"<div class=\"modal-header\"><button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></button><h4 class=\"modal-title\" id=\"contactLabel\">Informations</h4></div><div class=\"modal-body\"><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/fanda.png\" alt=\"Fanda\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Fanda</h4>Description of Fanda</div></div><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/pev.png\" alt=\"Pev\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Pev</h4>Description of Pev</div><div class=\"media\"><div class=\"media-left\"><a href=\"#\"><img class=\"media-object\" src=\"./img/github.png\" alt=\"Fanda\"></a></div><div class=\"media-body\"><h4 class=\"media-heading\">Github Sources</h4>You can Follow our activities on Github -> <a href=\"https://github.com/PapyPev/hamk-map-project\">sources</a></div></div></div><div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button></div>",
+      "view":"views/popupInformations.html"
     }
   ]
 }
