--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -52,7 +52,7 @@
 
     {
       "name": "osm_amenities",
-      "type": "point",
+      "type": "Point",
       "filters": true,
       "filters_type": "word",
       "styles": [
@@ -141,8 +141,8 @@
     },
 
     {
-      "name": "osm_transport_points",
-      "type": "point",
+      "name": "osm_transport_Points",
+      "type": "Point",
       "filters": true,
       "filters_type": "word",
       "styles": [
@@ -268,7 +268,7 @@
 
     {
       "name": "traffic",
-      "type": "lines",
+      "type": "Line",
       "filters": true,
       "filters_type": "bounds",
       "styles": [
