test: load Style (pretty not finish)

--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -141,7 +141,7 @@
     },
 
     {
-      "name": "osm_transport_Points",
+      "name": "osm_transport_points",
       "type": "Point",
       "filters": true,
       "filters_type": "key",
