--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -4,6 +4,8 @@
 
     {
       "name": "roads_motorway",
+      "attribute_value": "type",
+      "attribute_alias": "name",
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -20,6 +22,8 @@
 
     {
       "name": "roads_primary",
+      "attribute_value": "type",
+      "attribute_alias": "name",
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -36,6 +40,8 @@
 
     {
       "name": "roads_truck",
+      "attribute_value": "type",
+      "attribute_alias": "name",
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -52,6 +58,8 @@
 
     {
       "name": "osm_amenities",
+      "attribute_value": "type",
+      "attribute_alias": "name",
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -142,6 +150,8 @@
 
     {
       "name": "osm_transport_points",
+      "attribute_value": "type",
+      "attribute_alias": "name",
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -268,6 +278,8 @@
 
     {
       "name": "traffic",
+      "attribute_value": "traffic",
+      "attribute_alias": "traffic",
       "type": "Line",
       "filters": true,
       "filters_type": "bounds",
