test: Popup active

--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -6,6 +6,7 @@
       "name": "roads_motorway",
       "attribute_value": "type",
       "attribute_alias": "name",
+      "popup_activate": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -24,6 +25,7 @@
       "name": "roads_primary",
       "attribute_value": "type",
       "attribute_alias": "name",
+      "popup_activate": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -42,6 +44,7 @@
       "name": "roads_truck",
       "attribute_value": "type",
       "attribute_alias": "name",
+      "popup_activate": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -60,6 +63,7 @@
       "name": "osm_amenities",
       "attribute_value": "type",
       "attribute_alias": "name",
+      "popup_activate": true,
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -152,6 +156,7 @@
       "name": "osm_transport_points",
       "attribute_value": "type",
       "attribute_alias": "name",
+      "popup_activate": true,
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -280,6 +285,7 @@
       "name": "traffic",
       "attribute_value": "traffic",
       "attribute_alias": "traffic",
+      "popup_activate": true,
       "type": "Line",
       "filters": true,
       "filters_type": "bounds",
