--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -7,6 +7,7 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": false,
+      "visible": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -26,6 +27,7 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": false,
+      "visible": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -45,6 +47,7 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": false,
+      "visible": false,
       "type": "line",
       "filters": false,
       "filters_type": "",
@@ -64,6 +67,7 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": true,
+      "visible": false,
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -157,6 +161,7 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": true,
+      "visible": false,
       "type": "Point",
       "filters": true,
       "filters_type": "key",
@@ -286,6 +291,7 @@
       "attribute_value": "traffic",
       "attribute_alias": "traffic",
       "popup_activate": true,
+      "visible": false,
       "type": "Line",
       "filters": true,
       "filters_type": "bounds",
