test: Popup active

--- a/web/config/configLayerStyle.json
+++ b/web/config/configLayerStyle.json
@@ -150,12 +150,12 @@
       "attribute_value": "type",
       "attribute_alias": "name",
       "popup_activate": true,
-      "visible": false,
+      "visible": true,
       "type": "Point",
       "filters": true,
       "filters_type": "key",
       "zoom_min": 10,
-      "zoom_max": 12,
+      "zoom_max": 17,
       "styles": [
         {
           "filter": "motorway_junction",
